--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -103,7 +103,7 @@
         android:inputType="number" />
 
     <EditText
-        android:id="@+id/etRaza"
+        android:id="@+id/etRazaUp"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:hint="@string/etRaza"
